<resources>
    <!-- Do not translate. -->
    <string name="app_name">Assidua</string>

    <!-- Keys for shared preferences -->
    <!-- Do not translate. -->
    <string name="preference_file_key">app.assidua.assidua_android.PREFERENCE_FILE_KEY</string>

    <string name="preference_budget_order">budget_order</string>

    <string name="preference_budget_name_key">budget_name</string>
    <string name="preference_budget_move_left_key">budget_move_left</string>
    <string name="preference_budget_move_right_key">budget_move_right</string>
    <string name="preference_budget_delete_key">budget_delete</string>
    <string name="preference_budget_export_key">budget_export</string>

    <!-- Name of file directory where budgets CSVs are stored. -->
    <!-- Do not translate. -->
    <string name="budget_directory_location">budgets</string>

    <!-- Deprecated keys. -->
    <!-- Do not translate. -->
    <string name="balance_remaining_key">BALANCE_REMAINING</string>
    <string name="expenditures_key">EXPENDITURES</string>
    <string name="budgets_key">BUDGET</string>


    <!-- Displayed when creating a new budget -->
    <string name="create_new_budget">Create a new budget!</string>
    <string name="new_budget_name">Budget Name</string>
    <string name="create_button_text">Create!</string>

    <!-- Displayed on each DisplayBudgetFragment -->
    <string name="error_not_a_number">Please enter a number.</string>
    <string name="error_number_too_big">Please enter a smaller number.</string>

    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="delete">Delete</string>

    <string name="remaining_budget">Remaining Budget:</string>
    <string name="add_expenditure_cost">Cost</string>
    <string name="add_expenditure_name">Name (Optional)</string>
    <string name="undo_button_text">Undo</string>
    <string name="add_button_text">Commit</string>
    <string name="untitled_expenditure">Untitled</string>

    <!-- Displayed in individual budgets' settings pages -->
    <string name="set_budget_name">Set Budget Name:</string>
    <string name="budget_name">Budget Name</string>

    <string name="move_left">Move Left</string>
    <string name="move_right">Move Right</string>


    <string name="export_csv">Export CSV</string>
    <string name="export_failed">Failed to export.</string>
    <string name="export_plaintext_title">Export as Plain Text?</string>
    <string name="export_plaintext_explanation">CSV export doesn\'t work on older Android versions. Export as text CSV instead?</string>
    <string name="export_plaintext_yes">Yes</string>
    <string name="export_plaintext_cancel">Cancel</string>

    <string name="delete_budget">Delete budget</string>
    <string name="delete_budget_action_cannot_be_undone">This action cannot be undone!</string>
    <string name="delete_budget_confirm">Delete budget %s?</string>
    <string name="delete_budget_yes">Delete Budget</string>
    <string name="delete_budget_cancel">Cancel</string>

    <string name="delete_budget_success">Budget deleted successfully.</string>
    <string name="delete_budget_failure">Unable to delete budget.</string>
</resources>
