<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        android:icon="@drawable/ic_edit"
        app:dialogTitle="@string/set_budget_name"
        app:key="@string/preference_budget_name_key"
        app:title="@string/budget_name"
        app:useSimpleSummaryProvider="true" />
    <Preference
        android:icon="@drawable/ic_arrow_left"
        app:title="@string/move_left" />
    <Preference
        android:icon="@drawable/ic_arrow_right"
        app:title="@string/move_right" />

    <Preference
        android:icon="@drawable/ic_export"
        app:title="@string/export_csv" />

    <Preference
        android:icon="@drawable/ic_delete"
        app:title="@string/delete_budget"
        app:key="@string/preference_budget_delete_key"
        app:summary="@string/action_cannot_be_undone" />

</PreferenceScreen>